# tridiax

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
tests/: solver_test.py
tridiax/: __init__.py  __version__.py  divide_and_conquer.py  stone.py  thomas.py
